// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewLetterContent matches snapshot for NOT_YET_SUBMITTED status 1`] = `
<div>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Test Letter
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-123
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Standard letter
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag"
            data-status="not-yet-submitted"
            data-testid="status-tag"
          >
            Not yet submitted
          </strong>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              template.pdf
            </p>
          </div>
        </dd>
      </div>
    </dl>
  </div>
  <a
    aria-disabled="false"
    class="nhsuk-button"
    data-testid="preview-letter-template-cta"
    draggable="false"
    href="/templates/submit-letter-template/template-123?lockNumber=1"
    id="preview-letter-template-cta"
    role="button"
  >
    Submit template
  </a>
  <p>
    <a
      href="/message-templates"
    >
      Back to all templates
    </a>
  </p>
</div>
`;

exports[`PreviewLetterContent matches snapshot for PROOF_AVAILABLE status 1`] = `
<div>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Test Letter
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-123
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Standard letter
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag nhsuk-tag--orange"
            data-status="proof-available"
            data-testid="status-tag"
          >
            Proof available
          </strong>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              template.pdf
            </p>
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template proof files
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <ul
            class="proofs"
          >
            <li>
              <a
                data-testid="proof-link_proof.pdf"
                href="/templates/files/client-123/proofs/template-123/proof.pdf"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="container"
                >
                  <svg
                    aria-hidden="true"
                    class="icon"
                    fill="none"
                    height="26"
                    viewBox="0 0 20 26"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                      fill="#4C6272"
                    />
                  </svg>
                  <p
                    class="text"
                  >
                    proof.pdf
                  </p>
                </div>
              </a>
            </li>
          </ul>
        </dd>
      </div>
    </dl>
  </div>
  <section
    class="nhsuk-u-reading-width"
  >
    <details
      class="nhsuk-details"
    >
      <summary
        class="nhsuk-details__summary"
      >
        <span
          class="nhsuk-details__summary-text"
        >
          If this proof does not match the template
        </span>
      </summary>
      <div
        class="nhsuk-details__text"
      >
        <p>
          If the content or formatting of your proof does not match the template you originally provided, contact NHS Notify to describe what's wrong with the proof.
        </p>
        <p>
          NHS Notify will make the relevant changes and reproof your template.
        </p>
        <p>
          It can take 5 to 10 working days to get another proof of your template.
        </p>
        <p>
          If any personalisation does not appear how you expect, you may need to check if you're using the correct personalisation fields or if your example data is correct.
        </p>
      </div>
    </details>
    <details
      class="nhsuk-details"
    >
      <summary
        class="nhsuk-details__summary"
      >
        <span
          class="nhsuk-details__summary-text"
        >
          If you need to edit the template
        </span>
      </summary>
      <div
        class="nhsuk-details__text"
      >
        <p>
          Edit your original template on your computer, convert it to PDF and then upload as a new template.
        </p>
      </div>
    </details>
    <p>
      If you're happy with this proof, submit the template and NHS Notify will use it to set up the messages you want to send.
    </p>
  </section>
  <a
    aria-disabled="false"
    class="nhsuk-button"
    data-testid="preview-letter-template-cta"
    draggable="false"
    href="/templates/submit-letter-template/template-123?lockNumber=1"
    id="preview-letter-template-cta"
    role="button"
  >
    Submit template
  </a>
  <p>
    <a
      href="/message-templates"
    >
      Back to all templates
    </a>
  </p>
</div>
`;

exports[`PreviewLetterContent matches snapshot for RTL language 1`] = `
<div>
  <div
    class="nhsuk-u-reading-width"
  >
    <span
      class="nhsuk-caption-l"
    >
      Template
    </span>
    <h1
      class="preview__heading"
      data-testid="preview-message__heading"
    >
      Test Letter
    </h1>
  </div>
  <div
    class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
  >
    <dl
      class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
    >
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template ID
        </dt>
        <dd
          class="nhsuk-summary-list__value monospace-font"
          data-testid="preview-template-id"
        >
          template-123
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template type
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          Standard letter - Arabic
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Status
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <strong
            class="nhsuk-tag"
            data-status="not-yet-submitted"
            data-testid="status-tag"
          >
            Not yet submitted
          </strong>
        </dd>
      </div>
      <div
        class="nhsuk-summary-list__row"
      >
        <dt
          class="nhsuk-summary-list__key"
        >
          Template file
        </dt>
        <dd
          class="nhsuk-summary-list__value"
        >
          <div
            class="container"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="none"
              height="26"
              viewBox="0 0 20 26"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0V26H20V6.59375L19.7188 6.28125L13.7188 0.28125L13.4062 0H0ZM2 2H12V8H18V24H2V2ZM14 3.4375L16.5625 6H14V3.4375Z"
                fill="#4C6272"
              />
            </svg>
            <p
              class="text"
            >
              template.pdf
            </p>
          </div>
        </dd>
      </div>
    </dl>
  </div>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <div
        aria-live="polite"
        class="nhsuk-warning-callout nhsuk-u-margin-top-3"
        data-testid="rtl-language-warning"
      >
        <h2
          class="nhsuk-warning-callout__label"
        >
          <span
            role="text"
          >
            <span
              class="nhsuk-u-visually-hidden"
            >
              Important: 
            </span>
            Important
          </span>
        </h2>
        <p>
          The proof of this letter template will not be available online because of the language you've chosen.
        </p>
        <p>
          After you submit your template, our service team will send you a proof by email instead.
        </p>
        <p>
          This email will tell you what to do next.
        </p>
      </div>
    </div>
  </div>
  <a
    aria-disabled="false"
    class="nhsuk-button"
    data-testid="preview-letter-template-cta"
    draggable="false"
    href="/templates/submit-letter-template/template-123?lockNumber=1"
    id="preview-letter-template-cta"
    role="button"
  >
    Submit template
  </a>
  <p>
    <a
      href="/message-templates"
    >
      Back to all templates
    </a>
  </p>
</div>
`;
